--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
   "jsnext:main": "dist/index.es.js",
+  "keywords": [
+    "react",
+    "hooks",
+    "effect"
+  ],
   "engines": {
     "node": ">=8",
     "npm": ">=5"
